--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-minimal-pie-chart": "^8.4.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-scrollchor": "^7.0.2",
     "react-vertical-timeline-component": "^3.6.0",
     "react-waves-effect": "^1.5.1",
     "simplebar-react": "^2.4.3",
